--- a/emotion_preprocess.ipynb
+++ b/emotion_preprocess.ipynb
@@ -471,7 +471,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mne",
+   "display_name": "torch_minsu",
    "language": "python",
    "name": "python3"
   },
@@ -485,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
