--- a/emotion_preprocess.ipynb
+++ b/emotion_preprocess.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "\n",
-    "path = 'D:/One_한양대학교/private object minsu/coding/data/day1)emotion+mist'\n",
+    "path = 'D:/One_한양대학교/private object minsu/coding/data/brain_2025/day1)emotion+mist'\n",
     "sub_list = os.listdir(path)\n",
     "edf = mne.io.read_raw_bdf(f'{path}/{sub_list[7]}/emo.bdf', preload=True)\n",
     "data = []\n",
@@ -467,11 +467,71 @@
     "label_2 = label_2[1, np.argsort(label_2[0])]\n",
     "label_2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## fNIRS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.io import loadmat\n",
+    "import numpy as np\n",
+    "import mne\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "\n",
+    "path = 'D:/One_한양대학교/private object minsu/coding/data/brain_2025'\n",
+    "datf = loadmat(f'{path}/fNIRS_epoch.mat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype([('eors', 'O'), ('ecrs', 'O'), ('happy1', 'O'), ('happy2', 'O'), ('angry1', 'O'), ('angry2', 'O'), ('peace1', 'O'), ('peace2', 'O'), ('sad1', 'O'), ('sad2', 'O')])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datf['epoch'][0].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fnirs_resting = []\n",
+    "fnirs_ = []\n",
+    "for i in range(9):\n",
+    "    if i < 2:\n",
+    "        fnirs_resting.append(datf['epoch'][0][0][i][0][0].T)\n",
+    "    else:\n",
+    "        fnirs_.append(datf['epoch'][0][0][i][0][0].T)\n",
+    "fnirs_resting = np.stack(fnirs_resting,0)\n",
+    "fnirs_ = np.stack(fnirs_,0)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch_minsu",
+   "display_name": "mne",
    "language": "python",
    "name": "python3"
   },
@@ -485,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
