--- a/emotion_preprocess.ipynb
+++ b/emotion_preprocess.ipynb
@@ -513,19 +513,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "fnirs_resting = []\n",
     "fnirs_ = []\n",
-    "for i in range(9):\n",
+    "for i in range(10):\n",
+    "    temp = []\n",
+    "    for j in range(39):\n",
+    "        if j+1 in [4, 11, 31]: continue\n",
+    "        temp.append(datf['epoch'][0][0][i][0][j].T)\n",
     "    if i < 2:\n",
-    "        fnirs_resting.append(datf['epoch'][0][0][i][0][0].T)\n",
+    "        fnirs_resting.append(np.stack(temp, axis=0))\n",
     "    else:\n",
-    "        fnirs_.append(datf['epoch'][0][0][i][0][0].T)\n",
-    "fnirs_resting = np.stack(fnirs_resting,0)\n",
-    "fnirs_ = np.stack(fnirs_,0)"
+    "        fnirs_.append(np.stack(temp, axis=0))\n",
+    "fnirs_resting = np.stack(fnirs_resting,1)*1e+3\n",
+    "fnirs_ = np.stack(fnirs_, 1)*1e+3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('emo_fnirs.npy',fnirs_)"
    ]
   }
  ],
