--- a/emotion_preprocess.ipynb
+++ b/emotion_preprocess.ipynb
@@ -540,6 +540,236 @@
    "source": [
     "np.save('emo_fnirs.npy',fnirs_)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SAM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import numpy as np\n",
+    "\n",
+    "def Plot_Emotion_Label_Distribution():\n",
+    "    ROOT_PATH = 'D:/One_한양대학교/private object minsu/coding/data/brain_2025/day1)emotion+mist/'\n",
+    "    subj_list = os.listdir(ROOT_PATH)\n",
+    "    videos = ['resting','H1','H2','P1','P2','A1','A2','S1','S2']\n",
+    "    num_videos = len(videos)\n",
+    "\n",
+    "    emotion_label_ = np.zeros((len(subj_list), num_videos, 4), int)\n",
+    "    for idx, subj in enumerate(subj_list):\n",
+    "        dat_list = os.listdir(ROOT_PATH + subj)\n",
+    "\n",
+    "        label_raw = pd.read_csv(ROOT_PATH + subj + '/' + [s for s in dat_list if 'Emotion' in s][0])\n",
+    "        emotion_label_[idx,:,:2] = np.array(label_raw[videos][:2]).T\n",
+    "        emotion_label_[idx,1:,2:] = np.array(label_raw[['H1w','H2w','P1w','P2w','A1w','A2w','S1w','S2w']][:2]).T\n",
+    "\n",
+    "    new_emotion_label = emotion_label_[:,1:,:2] # 32, 8, 2\n",
+    "    # print(new_emotion_label[:,0:2,0])\n",
+    "    new_emotion_label = np.stack([new_emotion_label[:,:,0]>2,new_emotion_label[:,:,1]>2], axis=2, dtype=int)\n",
+    "    print(np.sum(new_emotion_label[:,:,0]==0),np.sum(new_emotion_label[:,:,0]==1))\n",
+    "    print(np.sum(new_emotion_label[:,:,1]==0),np.sum(new_emotion_label[:,:,1]==1),'\\n')\n",
+    "\n",
+    "    for i in range(4):\n",
+    "        print(np.sum(new_emotion_label[:,i*2:i*2+2,0]==0),np.sum(new_emotion_label[:,i*2:i*2+2,0]==1))\n",
+    "    print()\n",
+    "    for i in range(4):\n",
+    "        print(np.sum(new_emotion_label[:,i*2:i*2+2,1]==0),np.sum(new_emotion_label[:,i*2:i*2+2,1]==1))\n",
+    "    \n",
+    "\n",
+    "    plt.figure(figsize=(22,5))\n",
+    "    bar_width = 0.1\n",
+    "    index = np.arange(0,num_videos,1)\n",
+    "\n",
+    "    mean_emotion_label = np.mean(emotion_label_,0)\n",
+    "    std_emotion_label = np.std(emotion_label_,0)\n",
+    "\n",
+    "    plt.grid(axis='y',alpha=.5)\n",
+    "    bar1 = plt.bar(index - bar_width, mean_emotion_label[:,0], bar_width, alpha=1, color = 'orange', label = 'Arousal')# , yerr=std_emotion_label[:,0])\n",
+    "    bar3 = plt.bar(index, mean_emotion_label[:,2], bar_width, alpha=.5, color = 'orange', label = 'Arousal_Washoff')# , yerr=std_emotion_label[:,2])\n",
+    "    bar2 = plt.bar(index + bar_width, mean_emotion_label[:,1], bar_width, alpha=1, color = 'steelblue', label = 'Valence')# , yerr=std_emotion_label[:,1])\n",
+    "    bar4 = plt.bar(index + bar_width*2, mean_emotion_label[:,3], bar_width, alpha=.5, color = 'steelblue', label = 'Valence_Washoff')# , yerr=std_emotion_label[:,3])\n",
+    "    plt.xticks(np.arange(bar_width/2, num_videos+bar_width/2, 1), videos, fontweight='bold', fontsize='x-large', fontfamily='Malgun Gothic')\n",
+    "    plt.yticks(np.arange(0,6,1), fontweight='semibold',fontsize='x-large', fontfamily='Malgun Gothic')\n",
+    "    plt.title('Arousal-Valence SAM Score', fontsize='xx-large', fontweight='bold', fontfamily='Malgun Gothic')\n",
+    "    plt.ylabel(\"SAM Score\", fontsize='xx-large', fontweight='bold', fontfamily='Malgun Gothic')\n",
+    "    plt.xlabel(\"Videos\", fontsize='xx-large', fontweight='bold', fontfamily='Malgun Gothic')\n",
+    "    plt.legend(['Arousal','Arousal_Washoff','Valence','Valence_Washoff'], fontsize='x-large')\n",
+    "\n",
+    "# Plot_Emotion_Label_Distribution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_28556\\210457065.py:18: RuntimeWarning: invalid value encountered in cast\n",
+      "  emotion_label_[idx,1:,2:] = np.array(label_raw[['H1w','H2w','P1w','P2w','A1w','A2w','S1w','S2w']][:2]).T\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_28556\\210457065.py:17: RuntimeWarning: invalid value encountered in cast\n",
+      "  emotion_label_[idx,:,:2] = np.array(label_raw[videos][:2]).T\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_28556\\210457065.py:17: RuntimeWarning: invalid value encountered in cast\n",
+      "  emotion_label_[idx,:,:2] = np.array(label_raw[videos][:2]).T\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_28556\\210457065.py:18: RuntimeWarning: invalid value encountered in cast\n",
+      "  emotion_label_[idx,1:,2:] = np.array(label_raw[['H1w','H2w','P1w','P2w','A1w','A2w','S1w','S2w']][:2]).T\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_28556\\210457065.py:17: RuntimeWarning: invalid value encountered in cast\n",
+      "  emotion_label_[idx,:,:2] = np.array(label_raw[videos][:2]).T\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_28556\\210457065.py:17: RuntimeWarning: invalid value encountered in cast\n",
+      "  emotion_label_[idx,:,:2] = np.array(label_raw[videos][:2]).T\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_28556\\210457065.py:17: RuntimeWarning: invalid value encountered in cast\n",
+      "  emotion_label_[idx,:,:2] = np.array(label_raw[videos][:2]).T\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_28556\\210457065.py:18: RuntimeWarning: invalid value encountered in cast\n",
+      "  emotion_label_[idx,1:,2:] = np.array(label_raw[['H1w','H2w','P1w','P2w','A1w','A2w','S1w','S2w']][:2]).T\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_28556\\210457065.py:17: RuntimeWarning: invalid value encountered in cast\n",
+      "  emotion_label_[idx,:,:2] = np.array(label_raw[videos][:2]).T\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "ROOT_PATH = 'D:/One_한양대학교/private object minsu/coding/data/brain_2025/day1)emotion+mist/'\n",
+    "subj_list = os.listdir(ROOT_PATH)\n",
+    "videos = ['resting','H1','H2','P1','P2','A1','A2','S1','S2']\n",
+    "num_videos = len(videos)\n",
+    "\n",
+    "emotion_label_ = np.zeros((len(subj_list), num_videos, 4), int)\n",
+    "for idx, subj in enumerate(subj_list):\n",
+    "    dat_list = os.listdir(ROOT_PATH + subj)\n",
+    "\n",
+    "    label_raw = pd.read_csv(ROOT_PATH + subj + '/' + [s for s in dat_list if 'Emotion' in s][0])\n",
+    "    emotion_label_[idx,:,:2] = np.array(label_raw[videos][:2]).T\n",
+    "    emotion_label_[idx,1:,2:] = np.array(label_raw[['H1w','H2w','P1w','P2w','A1w','A2w','S1w','S2w']][:2]).T\n",
+    "\n",
+    "new_emotion_label = emotion_label_[:,1:,:2] # 32, 8, 2\n",
+    "# print(new_emotion_label[:,0:2,0])\n",
+    "# new_emotion_label = np.stack([new_emotion_label[:,:,0]>2,new_emotion_label[:,:,1]>2], axis=2, dtype=int)\n",
+    "# print(np.sum(new_emotion_label[:,:,0]==0),np.sum(new_emotion_label[:,:,0]==1))\n",
+    "# print(np.sum(new_emotion_label[:,:,1]==0),np.sum(new_emotion_label[:,:,1]==1),'\\n')\n",
+    "\n",
+    "# for i in range(4):\n",
+    "#     print(np.sum(new_emotion_label[:,i*2:i*2+2,0]==0),np.sum(new_emotion_label[:,i*2:i*2+2,0]==1))\n",
+    "# print()\n",
+    "# for i in range(4):\n",
+    "#     print(np.sum(new_emotion_label[:,i*2:i*2+2,1]==0),np.sum(new_emotion_label[:,i*2:i*2+2,1]==1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0]\n",
+      " [2 1]\n",
+      " [1 3]\n",
+      " [0 2]\n",
+      " [1 0]\n",
+      " [0 0]\n",
+      " [1 1]\n",
+      " [2 0]]\n",
+      "[[1 0]\n",
+      " [1 0]\n",
+      " [2 1]\n",
+      " [2 1]\n",
+      " [0 0]\n",
+      " [1 0]\n",
+      " [1 2]\n",
+      " [2 2]]\n",
+      "[[1 1]\n",
+      " [2 1]\n",
+      " [1 1]\n",
+      " [0 2]\n",
+      " [2 1]\n",
+      " [1 0]\n",
+      " [2 1]\n",
+      " [1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [1,3,4]:\n",
+    "    print(abs(new_emotion_label[i] - np.array([[5,5],[5,5],[1,5],[1,5],[5,1],[5,1],[1,1],[1,1]])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[21.        ,  1.14564392],\n",
+       "       [11.        ,  1.17260394],\n",
+       "       [ 0.        ,  1.25      ],\n",
+       "       [ 1.        ,  1.27475488],\n",
+       "       [ 3.        ,  1.27475488],\n",
+       "       [ 4.        ,  1.27475488],\n",
+       "       [10.        ,  1.29903811],\n",
+       "       [19.        ,  1.32287566],\n",
+       "       [15.        ,  1.3462912 ],\n",
+       "       [18.        ,  1.3462912 ],\n",
+       "       [34.        ,  1.36930639],\n",
+       "       [31.        ,  1.36930639],\n",
+       "       [29.        ,  1.39194109],\n",
+       "       [30.        ,  1.43614066],\n",
+       "       [13.        ,  1.45773797],\n",
+       "       [ 8.        ,  1.45773797],\n",
+       "       [ 2.        ,  1.47901995],\n",
+       "       [33.        ,  1.5       ],\n",
+       "       [17.        ,  1.5       ],\n",
+       "       [35.        ,  1.5       ],\n",
+       "       [12.        ,  1.5       ],\n",
+       "       [20.        ,  1.52069063],\n",
+       "       [ 6.        ,  1.52069063],\n",
+       "       [14.        ,  1.5612495 ],\n",
+       "       [22.        ,  1.58113883],\n",
+       "       [25.        ,  1.62018517],\n",
+       "       [28.        ,  1.62018517],\n",
+       "       [ 9.        ,  1.6583124 ],\n",
+       "       [24.        ,  1.67705098],\n",
+       "       [16.        ,  1.67705098],\n",
+       "       [27.        ,  1.73205081],\n",
+       "       [ 7.        ,  1.75      ],\n",
+       "       [32.        ,  1.80277564],\n",
+       "       [23.        ,  1.80277564],\n",
+       "       [ 5.        ,  1.88745861],\n",
+       "       [26.        ,  2.0310096 ]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "error = []\n",
+    "for i in range(36):\n",
+    "    error.append([i,(np.sum((new_emotion_label[i] - np.array([[5,5],[5,5],[1,5],[1,5],[5,1],[5,1],[1,1],[1,1]]))**2)/16)**(1/2)])\n",
+    "error = np.stack(error)\n",
+    "error[np.argsort(error[:,1])]"
+   ]
   }
  ],
  "metadata": {
