--- a/emotion_preprocess.ipynb
+++ b/emotion_preprocess.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting EDF parameters from D:\\One_한양대학교\\private object minsu\\coding\\data\\day1)emotion+mist\\1026_SJH\\emo.bdf...\n",
+      "Extracting EDF parameters from D:\\One_한양대학교\\private object minsu\\coding\\data\\brain_2025\\day1)emotion+mist\\1026_SJH\\emo.bdf...\n",
       "BDF file detected\n",
       "Setting channel info structure...\n",
       "Creating raw.info structure...\n",
@@ -104,7 +104,7 @@
        "<RawEDF | emo.bdf, 8 x 4438016 (2167.0 s), ~270.9 MB, data loaded>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
