--- a/zzz.ipynb
+++ b/zzz.ipynb
@@ -25,27 +25,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "id": "efa1d739",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(35, 2, 2, 16, 16, 371)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.load('out13.npy')\n",
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "3f5914c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "a = np.load('out13.npy')\n",
-    "# a = a.swapaxes(3,4)\n",
-    "# a = a.swapaxes(4,5)\n",
-    "# np.save('out13.npy', a)"
+    "a = np.load('out7.npy')\n",
+    "a = a.swapaxes(3,4)\n",
+    "a = a.swapaxes(4,5)\n",
+    "np.save('out7.npy', a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4ee2576a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((26, 60, 28, 2000), (26, 60, 72, 100), (26, 60))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "a = np.load('D:\\\\KMS\\\\data\\\\brain_2025\\\\nback.npz')"
+    "a = np.load('D:\\\\KMS\\\\data\\\\brain_2025\\\\WG.npz')\n",
+    "a['eeg'].shape, a['fnirs'].shape, a['label'].shape"
    ]
   },
   {
