--- a/load_data.ipynb
+++ b/load_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,8 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "data = np.load('emotion_data.npz')\n",
+    "data = np.load('emotion_data_ica.npz') # ICA\n",
+    "data = np.load('emotion_data.npz') # no-ICA\n",
     "data['eeg'].shape # subject * trial * channels * time samples (120 s)"
    ]
   },
@@ -81,36 +82,6 @@
    ],
    "source": [
     "data['label'].shape # subject * trial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(32, 8, 1, 3, 371)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "def window_slicing(arr, start_point, window_len):\n",
-    "    total_len = arr.shape[-1]\n",
-    "    \n",
-    "    start_idx = int(total_len * start_point / 120)\n",
-    "    window_length = int(total_len * window_len / 120)\n",
-    "    n_windows = (total_len - start_idx) // window_length\n",
-    "    return np.stack([arr[:,:,:,start_idx + i * window_length : start_idx + (i + 1) * window_length] for i in range(n_windows)], 2)\n",
-    "\n",
-    "window_slicing(np.zeros((32,8,3,742)),60,60).shape"
    ]
   }
  ],
