--- a/zzz.ipynb
+++ b/zzz.ipynb
@@ -48,6 +48,46 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "14a94d35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "path = 'D:\\KMS\\data\\\\brain_2025'\n",
+    "for i in [2,3,4]:\n",
+    "    for j in ['eeg','fnirs']:\n",
+    "        a = np.load(f'{path}\\sta_{i}_{j}.npy')\n",
+    "        a = a.swapaxes(3,4)\n",
+    "        a = a.swapaxes(4,5)\n",
+    "        print(a.shape)\n",
+    "        np.save(f'{path}\\sta_{i}_{j}.npy', a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "430d78fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(26, 27, 1, 16, 16, 8000)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.load(f'{path}\\sta_4_eeg.npy')\n",
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3f5914c4",
    "metadata": {},
    "outputs": [],
@@ -79,6 +119,29 @@
    "source": [
     "import numpy as np\n",
     "a = np.load('D:\\\\KMS\\\\data\\\\brain_2025\\\\WG.npz')\n",
+    "a['eeg'].shape, a['fnirs'].shape, a['label'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fafa7ed6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((26, 36, 28, 4000), (26, 36, 72, 200), (26, 36))"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.load('D:\\\\KMS\\\\data\\\\brain_2025\\\\DSR.npz')\n",
     "a['eeg'].shape, a['fnirs'].shape, a['label'].shape"
    ]
   },
@@ -178,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mne",
+   "display_name": "minsu",
    "language": "python",
    "name": "python3"
   },
@@ -192,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
