--- a/Net_info.ipynb
+++ b/Net_info.ipynb
@@ -2,64 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b7eda72b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "====================================================================================================\n",
-       "Layer (type:depth-idx)                             Output Shape              Param #\n",
-       "====================================================================================================\n",
-       "SyncNet_ablation                                   [16, 1]                   --\n",
-       "├─Sequential: 1-1                                  [16, 32, 1, 1920]         --\n",
-       "│    └─Conv2d: 2-1                                 [16, 16, 7, 7680]         224\n",
-       "│    └─ELU: 2-2                                    [16, 16, 7, 7680]         --\n",
-       "│    └─GroupNorm: 2-3                              [16, 16, 7, 7680]         32\n",
-       "│    └─Conv2d: 2-4                                 [16, 16, 1, 7680]         1,808\n",
-       "│    └─ELU: 2-5                                    [16, 16, 1, 7680]         --\n",
-       "│    └─GroupNorm: 2-6                              [16, 16, 1, 7680]         32\n",
-       "│    └─AvgPool2d: 2-7                              [16, 16, 1, 3840]         --\n",
-       "│    └─Conv2d: 2-8                                 [16, 32, 1, 3840]         6,688\n",
-       "│    └─ELU: 2-9                                    [16, 32, 1, 3840]         --\n",
-       "│    └─GroupNorm: 2-10                             [16, 32, 1, 3840]         64\n",
-       "│    └─AvgPool2d: 2-11                             [16, 32, 1, 1920]         --\n",
-       "├─Sequential: 1-2                                  [16, 32, 1, 371]          --\n",
-       "│    └─Conv2d: 2-12                                [16, 16, 26, 371]         96\n",
-       "│    └─ELU: 2-13                                   [16, 16, 26, 371]         --\n",
-       "│    └─GroupNorm: 2-14                             [16, 16, 26, 371]         32\n",
-       "│    └─Conv2d: 2-15                                [16, 32, 1, 371]          13,344\n",
-       "│    └─ELU: 2-16                                   [16, 32, 1, 371]          --\n",
-       "│    └─GroupNorm: 2-17                             [16, 32, 1, 371]          64\n",
-       "├─Linear: 1-3                                      [16, 32, 1, 128]          245,888\n",
-       "├─Linear: 1-4                                      [16, 32, 1, 128]          47,616\n",
-       "├─Sequential: 1-5                                  [16, 32, 128]             --\n",
-       "│    └─Linear: 2-18                                [16, 32, 128]             32,896\n",
-       "│    └─GroupNorm: 2-19                             [16, 32, 128]             64\n",
-       "├─PositionalEncoding: 1-6                          [16, 32, 128]             --\n",
-       "├─TransformerClassifier: 1-7                       [16, 1]                   --\n",
-       "│    └─TransformerEncoder: 2-20                    [16, 32, 128]             --\n",
-       "│    │    └─ModuleList: 3-1                        --                        1,186,048\n",
-       "│    └─Sequential: 2-21                            [16, 1]                   --\n",
-       "│    │    └─Linear: 3-2                            [16, 1]                   4,097\n",
-       "│    │    └─Sigmoid: 3-3                           [16, 1]                   --\n",
-       "====================================================================================================\n",
-       "Total params: 1,538,993\n",
-       "Trainable params: 1,538,993\n",
+       "==========================================================================================\n",
+       "Layer (type:depth-idx)                   Output Shape              Param #\n",
+       "==========================================================================================\n",
+       "STANet                                   [16]                      --\n",
+       "├─ConvBlock: 1-1                         [16, 16, 8, 8, 1280]      --\n",
+       "│    └─Conv3d: 2-1                       [16, 16, 8, 8, 1280]      848\n",
+       "│    └─BatchNorm3d: 2-2                  [16, 16, 8, 8, 1280]      32\n",
+       "│    └─ELU: 2-3                          [16, 16, 8, 8, 1280]      --\n",
+       "│    └─Conv3d: 2-4                       [16, 16, 8, 8, 186]       656\n",
+       "│    └─BatchNorm3d: 2-5                  [16, 16, 8, 8, 186]       32\n",
+       "│    └─ELU: 2-6                          [16, 16, 8, 8, 186]       --\n",
+       "│    └─Conv3d: 2-7                       [16, 16, 8, 8, 1280]      848\n",
+       "│    └─BatchNorm3d: 2-8                  [16, 16, 8, 8, 1280]      32\n",
+       "│    └─ELU: 2-9                          [16, 16, 8, 8, 1280]      --\n",
+       "│    └─FGA: 2-10                         [16, 16, 8, 8, 1280]      1\n",
+       "│    │    └─Conv3d: 3-1                  [16, 1, 8, 8, 186]        721\n",
+       "├─Dropout: 1-2                           [16, 16, 8, 8, 1280]      --\n",
+       "├─Dropout: 1-3                           [16, 16, 8, 8, 1280]      --\n",
+       "├─Dropout: 1-4                           [16, 16, 8, 8, 186]       --\n",
+       "├─ConvBlock: 1-5                         [16, 32, 4, 4, 640]       --\n",
+       "│    └─Conv3d: 2-11                      [16, 32, 4, 4, 640]       10,272\n",
+       "│    └─BatchNorm3d: 2-12                 [16, 32, 4, 4, 640]       64\n",
+       "│    └─ELU: 2-13                         [16, 32, 4, 4, 640]       --\n",
+       "│    └─Conv3d: 2-14                      [16, 32, 4, 4, 93]        6,176\n",
+       "│    └─BatchNorm3d: 2-15                 [16, 32, 4, 4, 93]        64\n",
+       "│    └─ELU: 2-16                         [16, 32, 4, 4, 93]        --\n",
+       "│    └─Conv3d: 2-17                      [16, 32, 4, 4, 640]       10,272\n",
+       "│    └─BatchNorm3d: 2-18                 [16, 32, 4, 4, 640]       64\n",
+       "│    └─ELU: 2-19                         [16, 32, 4, 4, 640]       --\n",
+       "│    └─FGA: 2-20                         [16, 32, 4, 4, 640]       1\n",
+       "│    │    └─Conv3d: 3-2                  [16, 1, 4, 4, 93]         865\n",
+       "├─Dropout: 1-6                           [16, 32, 4, 4, 1]         --\n",
+       "├─Dropout: 1-7                           [16, 32, 4, 4, 1]         --\n",
+       "├─Dropout: 1-8                           [16, 32, 4, 4, 1]         --\n",
+       "├─EFAttention: 1-9                       [16, 256]                 --\n",
+       "│    └─Linear: 2-21                      [16, 256]                 131,328\n",
+       "│    └─Linear: 2-22                      [16, 256]                 131,328\n",
+       "│    └─Linear: 2-23                      [16, 256]                 131,328\n",
+       "│    └─MultiheadAttention: 2-24          [16, 256]                 263,168\n",
+       "├─Linear: 1-10                           [16, 256]                 65,792\n",
+       "├─Linear: 1-11                           [16, 256]                 65,792\n",
+       "├─Linear: 1-12                           [16, 256]                 131,328\n",
+       "├─Linear: 1-13                           [16, 1]                   257\n",
+       "├─Linear: 1-14                           [16, 1]                   257\n",
+       "├─Linear: 1-15                           [16, 1]                   257\n",
+       "├─Linear: 1-16                           [16, 1]                   257\n",
+       "├─Linear: 1-17                           [16, 1]                   257\n",
+       "==========================================================================================\n",
+       "Total params: 952,297\n",
+       "Trainable params: 952,297\n",
        "Non-trainable params: 0\n",
-       "Total mult-adds (Units.MEGABYTES): 941.94\n",
-       "====================================================================================================\n",
-       "Input size (MB): 4.06\n",
-       "Forward/backward pass size (MB): 347.68\n",
-       "Params size (MB): 5.63\n",
-       "Estimated Total Size (MB): 357.37\n",
-       "===================================================================================================="
+       "Total mult-adds (Units.GIGABYTES): 6.03\n",
+       "==========================================================================================\n",
+       "Input size (MB): 137.99\n",
+       "Forward/backward pass size (MB): 901.72\n",
+       "Params size (MB): 2.76\n",
+       "Estimated Total Size (MB): 1042.46\n",
+       "=========================================================================================="
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -68,12 +91,12 @@
     "from models.stanet import STANet\n",
     "from torchinfo import summary\n",
     "\n",
-    "model = SyncNet2([7,7680],[26,371], use_lstm=True)\n",
-    "model = SyncNet_ablation([7,7680],[26,371],128)\n",
+    "# model = SyncNet2([7,7680],[26,371], use_lstm=True)\n",
+    "# model = SyncNet_ablation([7,7680],[26,371],128)\n",
     "# model = EF_net(1)\n",
-    "summary(model, [(16,7,7680),(16,26,371)])\n",
-    "# model = STANet()\n",
-    "# summary(model, [(16,1,16,16,7680),(16,2,16,16,371)])"
+    "# summary(model, [(16,7,7680),(16,26,371)])\n",
+    "model = STANet()\n",
+    "summary(model, [(16,1,16,16,7680),(16,2,16,16,371)])"
    ]
   },
   {
